--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Exemple GitHub</title>
 </head>
 <body>
+    <h1>Titre ajouté par dev02</h1>
+        <p>
+            Partie du dev02.
+        </p>
     
 </body>
 </html>
